Merchant service admin endpoints